add documentation, reservations
