# src/models/initModels.js
@@ -17,8 +17,14 @@ const initModels = () => {
   Users.hasMany(Users_images);
 
   //? Users <-> Accomodations
-  Users.belongsToMany(Accommodations, { through: Reservations, });
-  Accommodations.belongsToMany(Users, { through: Reservations,});
+  //? Users.belongsToMany(Accommodations, { through: Reservations, });
+  //? Accommodations.belongsToMany(Users, { through: Reservations,});
+
+  Users.hasMany(Reservations)
+  Reservations.belongsTo(Users)
+
+  Accommodations.hasMany(Reservations)
+  Reservations.belongsTo(Accommodations)
 
   //? Accomodations -> Acommodation_images
   Accommodation_images.belongsTo(Accommodations);
