# src/reservations/reservations.router.js
@@ -1,0 +1,10 @@
+const router = require('express').Router()
+const reservationServices = require('./reservation.http')
+
+router.route('/')
+    .get(reservationServices.getAll)
+
+
+module.exports = {
+    router
+}
